--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,16 @@
     .btn {
       float: right;
     }
+    h1 {
+      text-decoration: underline;
+    }
+    body {
+      background-color: #DCDCDC
+    }
+    .navbar {
+      background-color: black;
+      color: white;
+    }
   </style>
   </head>
   <body>
