--- a/templates/base.html
+++ b/templates/base.html
@@ -19,14 +19,11 @@
     body {
       background-color: #DCDCDC
     }
-    .navbar {
-      background-color: black;
-      color: white;
-    }
+
   </style>
   </head>
   <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="nav navbar-nav">
             {% if not request.user.is_authenticated %}
