still styling the page

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,10 @@
     body {
       background-color: #DCDCDC
     }
-
+    a:hover {
+      color: black;
+      background-color: white;
+    }
   </style>
   </head>
   <body>
