--- a/templates/app/bookmark_form.html
+++ b/templates/app/bookmark_form.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Enter a URL!</h1>
-<form class="" action="" method="post">
-  {% csrf_token %}
-  {{ form }}
-  <input type="submit" name="" value="Submit">
-</form>
+{% if request.user.is_authenticated %}
+  <h1>Enter a URL!</h1>
+  <form class="" action="" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" name="" value="Submit">
+  </form>
+{% endif %}
 {% endblock %}
