--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>URL Shortener</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" media="screen" title="no title">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style media="screen">
     .col-md-4 {
@@ -28,6 +29,9 @@
     }
     .user {
       color: white;
+    }
+    #log {
+      float: left;
     }
   </style>
   </head>
