--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Login</h1>
-<form class="" action="" method="post">
-  {% csrf_token %}
-  {{ form }}
-  <input type="submit" name="name" value="Login">
-</form>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="panel panel-success">
+      <div class="panel-heading">
+        <h1 id="cent">Login</h1>
+      </div>
+      <div class="panel-body">
+        <form class="" action="" method="post">
+          {% csrf_token %}
+          <div class="input-group">
+            <div class="input-group-addon">
+              <span class="glyphicon glyphicon-user"></span>
+              <input type="text" name="username" placeholder="Username"><br>
+            </div>
+          </div>
+          <div class="input-group">
+            <div class="input-group-addon">
+              <span class="glyphicon glyphicon-lock"></span>
+              <input type="password" name="password" placeholder="Password"><br>
+            </div>
+          </div>
+          <button id="log" type="submit" class="btn btn-success btn-block">Login!</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
