--- a/templates/app/bookmark_list.html
+++ b/templates/app/bookmark_list.html
@@ -13,7 +13,7 @@
             <div class="panel-body">
                 <form class="" action="{% url 'url_create_view' %}" method="post">
                     <input type="text" name="title" value="" placeholder="title">
-                    <input type="text" name="url" value="" placeholder="url"><br>
+                    <input type="text" name="url_page" value="" placeholder="url"><br>
                     <input type="text" name="description" value="" placeholder="description">
                     <input type="checkbox" name="public" value="True">Public? <br>
                     <button id="log" type="submit" class="btn btn-success">Shorten!</button>
