--- a/templates/app/bookmark_list.html
+++ b/templates/app/bookmark_list.html
@@ -14,7 +14,7 @@
                 <form class="" action="{% url 'url_create_view' %}" method="post">
                   {% csrf_token %}
                   <input type="text" name="title" value="" placeholder="title">
-                  <input type="url" name="url_page" value="" placeholder="url"><br>
+                  <input type="url" name="url_page" value="" placeholder="url" required="true"><br>
                   <input type="text" name="description" value="" placeholder="description">
                   <input type="checkbox" name="public" value="True">Public? <br>
                   <button id="log" type="submit" class="btn btn-success">Shorten!</button>
