--- a/templates/app/bookmark_list.html
+++ b/templates/app/bookmark_list.html
@@ -56,7 +56,7 @@
                 <h3>{{ url.title }}</h3> <a href="{% url 'url_update_view' url.id %}">Update <span class="glyphicon glyphicon-pencil"></span></a>
             </div>
             <div class="panel-body">
-              <a href="{{ url.new_url }}">localhost:8000/{{ url.new_url }}</a>
+              <a href="{{ url.new_url }}">url-shortener/{{ url.new_url }}</a>
               <button type="button" class="btn btn-primary">Click Count <span class="badge">{{ url.click_count }}</span></button> <br>
               Created by: <b>{{ url.user }}</b> <br>
               Description: {{ url.description }}
